[gd_scene load_steps=7 format=3 uid="uid://p2t6adncdly2"]

[ext_resource type="Script" path="res://map/menu/menu.gd" id="1_edflh"]
[ext_resource type="AudioStream" uid="uid://demjxmpgj1y5a" path="res://audio/menu.mp3" id="2_rihxh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrd3h"]
content_margin_left = 10.0
content_margin_top = 30.0
content_margin_right = 10.0
content_margin_bottom = 30.0
bg_color = Color(0, 0, 0, 0.537255)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nt1u0"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojane"]
bg_color = Color(1, 1, 1, 0.141176)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="FontFile" id="FontFile_lhgv6"]
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/26/0/glyphs/0/advance = Vector2(0, 0)
cache/0/26/0/glyphs/0/offset = Vector2(0, 0)
cache/0/26/0/glyphs/0/size = Vector2(0, 0)
cache/0/26/0/glyphs/0/uv_rect = Rect2(0, 0, 0, 0)
cache/0/26/0/glyphs/0/texture_idx = -1
cache/0/26/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/26/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/26/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="menu" type="CenterContainer" node_paths=PackedStringArray("mainMenu", "creditMenu", "howToMenu", "menuMusic")]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_edflh")
mainMenu = NodePath("PanelContainer/MainMenu")
creditMenu = NodePath("PanelContainer/CreditsMenu")
howToMenu = NodePath("PanelContainer/HowToMenu")
menuMusic = NodePath("AudioStreamPlayer")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 800)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hrd3h")

[node name="MainMenu" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 68
text = "Pivot"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MainMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="NG_btn" type="Button" parent="PanelContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_nt1u0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojane")
text = "Casual"

[node name="NGS_btn" type="Button" parent="PanelContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_nt1u0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojane")
text = "Survival"

[node name="Cont_btn" type="Button" parent="PanelContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_nt1u0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojane")
text = "Continue"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MainMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/separation = 200

[node name="HowTo_btn" type="Button" parent="PanelContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_nt1u0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojane")
text = "How to Play"

[node name="Cred_btn" type="Button" parent="PanelContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_nt1u0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojane")
text = "Credits"

[node name="Quit_btn" type="Button" parent="PanelContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = SubResource("StyleBoxFlat_nt1u0")
theme_override_styles/hover = SubResource("StyleBoxFlat_ojane")
text = "Quit"

[node name="CreditsMenu" type="VBoxContainer" parent="PanelContainer"]
visible = false
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/CreditsMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 68
text = "Pivot"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/CreditsMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label2" type="Label" parent="PanelContainer/CreditsMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/line_spacing = 5
theme_override_fonts/font = SubResource("FontFile_lhgv6")
theme_override_font_sizes/font_size = 26
text = "Created By: 
Nick Marx




Audio Assets:
cynicmusic - Crystal Cave (song18)
pixelsphere.org/The Cynic Project




Vitalezzz - Gravity Turn(action/calm)




*music obtained from opengameart.org*




Special Thanks to:
Jeremiah Domon for his valuable feedback




The Godot community for creating such a wonderful game engine and helping me whenever I got stuck




...and thank you for playing."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 131

[node name="HowToMenu" type="VBoxContainer" parent="PanelContainer"]
visible = false
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/HowToMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 68
text = "Pivot"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/HowToMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label2" type="Label" parent="PanelContainer/HowToMenu"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/line_spacing = 5
theme_override_fonts/font = SubResource("FontFile_lhgv6")
theme_override_font_sizes/font_size = 26
text = "Press SPACE while over the center of the 
next dot to gain a speed increase.




When the progress bar at the bottom fills, 
press the ARROW KEYS to pivot the map 
in that direction.




Main goal is to get the highest score.




Yellow dots are worth more than black.




In Survival you must also avoid the 
inevitable TUV for as long as possible.
It will spawn once your score is high 
enough.




ESC key to open menu."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 131

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rihxh")
bus = &"Music"

[connection signal="pressed" from="PanelContainer/MainMenu/NG_btn" to="." method="_on_ng_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MainMenu/NGS_btn" to="." method="_on_ngs_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MainMenu/Cont_btn" to="." method="_on_cont_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MainMenu/HowTo_btn" to="." method="_on_how_to_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MainMenu/Cred_btn" to="." method="_on_cred_btn_pressed"]
[connection signal="pressed" from="PanelContainer/MainMenu/Quit_btn" to="." method="_on_quit_btn_pressed"]
